# tsdb-15721

./: .gitignore  Cargo.toml  README.md
crates/common/src/: config.rs  error.rs  lib.rs
crates/datamodel/: Cargo.toml
crates/datamodel/src/: batch.rs  lib.rs  schema.rs  types.rs
crates/encoding/: Cargo.toml
crates/encoding/src/: lib.rs
crates/exec/: Cargo.toml
crates/exec/src/: agg.rs  expr.rs  lib.rs
crates/exec/tests/: scan_stream.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: lib.rs
crates/planner/: Cargo.toml
crates/planner/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: format.rs  lib.rs  meta.rs  reader.rs  writer.rs
crates/storage/tests/: meta_only.rs  range_read.rs  roundtrip.rs
docs/: syllabus.md
docs/notes/: README.md
docs/papers/: README.md
labs/lab01_chunk/: Cargo.toml  README.md
labs/lab02_encoding/: Cargo.toml  README.md
labs/lab03_vector/: Cargo.toml  README.md
labs/lab04_agg/: Cargo.toml  README.md
labs/lab05_join/: Cargo.toml  README.md
labs/lab06_opt_rule/: Cargo.toml  README.md
labs/lab07_opt_cost/: Cargo.toml  README.md
labs/lab08_skew/: Cargo.toml  README.md
labs/lab09_compaction/: Cargo.toml  README.md
labs/lab10_dist_exec/: Cargo.toml  README.md
labs/lab11_fault/: Cargo.toml  README.md
labs/lab12_project/: Cargo.toml  README.md
scripts/: bench.sh  report.py
tools/flame/: Cargo.toml
tools/gen_data/: Cargo.toml
tools/inspect_chunk/: Cargo.toml
(+20 files in other folders)
